refactor: use sequelize as orm
